
* Making sure all validators are throwing exceptions if validation error occurs to prevent logic from proceding (more secure).

* Support for public and private caching of HTTP GET endpoints using Cache-Control HTTP header.

* Creating a warning that we return to client durin _"ping"_ invocation if installation is still using the default [magic.authenticate] slot.

* Made the filename optional in [io.files.move] and [io.files.copy], and if not given, uses the old filename, only updating the folder
  where the file can be found.

* Created a _"Setup authentication"_ wizard that allows the user to follow a wizard to create a secure database authentication system
  out of his Magic installation. Works with both MS SQL Server and MySQL, and the user can choose which authentication database type he
  or she wants to use.


### Updated modules for version 5.5.6

* magic.lambda.slots

* magic.lambda.mysql

* magic.lambda.mssql

* magic.lambda.validators

* magic.lambda.io

* magic.lambda.scheduler

* magic.lambda.library

* magic.lambda.io

* Magic itself, especially the _"/files/"_ folder is important to update.



## Version 5.5.7

* Getting authentication setup and crudifier to work with mssql data adapter.



## Version 5.5.8

* Support for filtering the results of the [slots.vocabulary] slot.

* Started work on _"transformers"_, that allows to transform data supplied in through an HTTP endpoint to something else.
  Among other things, this will replace the existing _"BlowFish hash passwords"_ functionality, by providing a generic means
  of transforming some sort of input data, to something else - Especially for update and inserts, but also possibly (later)
  for read and delete invocations.

* Minor bugfixes in the frontend.

* Preventing [unwrap] from trying to evaluate values that are not expressions, to allow for easily evaluate hierarchies of
  "mixed values".


### Updated modules for version 5.5.8

* magic.lambda.slots

* magic.lambda