@@ -246,10 +246,6 @@
       <mat-checkbox
         style="margin-left: 2rem;"
         [(ngModel)]="publicCache">Public cache</mat-checkbox>
-      <mat-checkbox
-        style="margin-left: 2rem;"
-        *ngIf="hasPasswordField()"
-        [(ngModel)]="hashPassword">Cryptographically secure the password field</mat-checkbox>
 
       <h3>Validators</h3>
 
