@@ -1,43 +1,0 @@
-
-/*
- * Template for HTTP POST CRUD requests.
- *
- * Expects {database} and {table} [apply] arguments.
- */
-.arguments
-
-
-/*
- * Hashing any passwords found in arguments.
- */
-for-each:x:@.arguments/*
-   get-name:x:@.dp/#
-   switch:x:-
-      case:pwd
-      case:password
-      case:Password
-         set-value:x:@.dp/#
-            crypto.password.hash:x:@.dp/#
-
-
-/*
- * Parametrizing [magic.db.xxx.create].
- */
-add:x:./*/wait.slots.signal/*/values
-   get-nodes:x:@.arguments/*
-
-
-/*
- * Invoking [magic.db.xxx.create]
- */
-wait.slots.signal:magic.db.xxx.create
-   database:{database}
-   table:{table}
-   return-id:{return-id}
-   values
-
-
-/*
- * Returning results back to caller.
- */
-slots.return-nodes:x:@wait.slots.signal/*
