@@ -1,42 +1,0 @@
-
-/*
- * Template for HTTP PUT CRUD requests.
- */
-.arguments
-
-
-/*
- * Hashing any passwords found in arguments.
- */
-for-each:x:@.arguments/*
-   get-name:x:@.dp/#
-   switch:x:-
-      case:pwd
-      case:password
-      case:Password
-         set-value:x:@.dp/#
-            crypto.password.hash:x:@.dp/#
-
-
-/*
- * Adding the rest of our parameters into [values].
- */
-add:x:./*/wait.slots.signal/*/values
-   get-nodes:x:@.arguments/*
-
-
-/*
- * Invoking [magic.db.xxx.update]
- */
-unwrap:x:+/*/ids/*
-wait.slots.signal:magic.db.xxx.update
-   database:{database}
-   table:{table}
-   values
-   ids
-
-
-/*
- * Returning results back to caller.
- */
-slots.return-nodes:x:@wait.slots.signal/*
