@@ -6,6 +6,6 @@
 slots.create:transformers.hash-password
 
    get-value:x:@.arguments/0/#
-   crypto.hash:x:-
+   crypto.password.hash:x:-
    set-value:x:@.arguments/0/#
-      get-value:x:@crypto.hash
+      get-value:x:@crypto.password.hash
